2002-09-21  Carlos O'Donell  <carlos@baldric.uwo.ca>

	* sysdeps/hppa/abort-instr.h: New file.

2002-09-22  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/Versions (ld: GLIBC_2.0): Remove duplicate entry.

	* sysdeps/mach/hurd/dl-sysdep.c (_exit): Add alias __GI__exit.

2002-09-22  Andreas Schwab  <schwab@suse.de>

	* cppflags-iterator.mk (CPPFLAGS-$(cpp-src)): Append, not overwrite.

	* sysdeps/m68k/fpu/bits/mathinline.h (isgreater, isgreaterequal)
	(isless, islessequal, islessgreater, isunordered) [GCC >= 3.1]:
	Use GCC builtins.

2002-09-21  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/i386/dl-procinfo.h (_DL_HWCAP_PLATFORM):
	Correct the value so it covers all platforms, and is computed
	from _DL_PLATFORMS_COUNT rather than hard-wired.
	From Andrew Suffield <asuffield@debian.org>.

2002-09-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/getsysstats.c (get_proc_path): Avoid
	locking when using mount tab file.
	* sysdeps/unix/sysv/linux/internal_statvfs.c: Likewise.
	* sysdeps/unix/sysv/linux/statvfs.c: Include <stdio_ext.h>.
	* sysdeps/unix/sysv/linux/fstatvfs.c: Likewise.

	* elf/dl-init.c (_dl_init): Fix test of the size of the
	preinit_array section.
	(call_init): Optimize access to DT_INIT_ARRAY entry a bit.
	Reported by Brian Cabral <cabral@ikuni.com>.

2002-09-20  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/sysdep.h: Remove powerpc32 specific macros.
	* sysdeps/powerpc/powerpc32/sysdep.h: New file.  Define powerpc32
	specific macros copied from sysdeps/powerpc/sysdep.h.
	* sysdeps/powerpc/powerpc64/sysdep.h: New file.  Define powerpc64
	specific macros.
	* sysdeps/unix/powerpc/sysdep.h: Include <bits/wordsize.h>.
	[__WORDSIZE==64]: Include sysdeps/powerpc/powerpc64/sysdep.h.
	[!__WORDSIZE==64]: Include sysdeps/powerpc/powerpc32/sysdep.h.

2002-09-19  Bruno Haible  <bruno@clisp.org>

	* intl/dcigettext.c (DCIGETTEXT): Restore errno only right before
	returning.
