@@ -1,3 +1,8 @@
+2002-09-22  Roland McGrath  <roland@redhat.com>
+
+	* string/bug-stpncpy-offend.c: New file.
+	* string/Makefile (tests): Add it.
+
 2002-09-21  Carlos O'Donell  <carlos@baldric.uwo.ca>
 
 	* sysdeps/hppa/abort-instr.h: New file.
